5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1593_820.log
== TEST (2019-03-28 11:15:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

a = int(input('quanto deseja scar? '))

print(a//50)
print((a%50)//20)
print(((a%50)%20)//2)


-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:16:01) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
print((a%50)//20)
print(((a%50)%20)//2)


-- OUTPUT:
40
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:35) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print((a//20)
a = a -((a//20)*20)
print(a//2)


-- ERROR:
File "XXXX", line 6
    a = a -((a//20)*20)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:21:24) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print((a//20)
a = a - ((a//20)*20)
print(a//2)


-- ERROR:
File "XXXX", line 6
    a = a - ((a//20)*20)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:21:52) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a -= ((a//50)*50)
print((a//20)
a -= ((a//20)*20)
print(a//2)


-- ERROR:
File "XXXX", line 6
    a -= ((a//20)*20)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:22) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a -= ((a//50)*50)
print((a//20)

print(a//2)


-- ERROR:
File "XXXX", line 7
    print(a//2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:34) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a -= ((a//50)*50)
print((a//20)




-- ERROR:
File "XXXX", line 9
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:37) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a -= ((a//50)*50)
print((a//20)




-- ERROR:
File "XXXX", line 9
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:44) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a -= ((a//50)*50)
print((a//20)
-- ERROR:
File "XXXX", line 6
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:23:56) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print((a//20)
-- ERROR:
File "XXXX", line 6
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:23:59) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print((a//20)
-- ERROR:
File "XXXX", line 6
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:11) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print((a//20)
-- ERROR:
File "XXXX", line 6
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:21) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print(a//20)
-- OUTPUT:
40
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:25:14) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print(a -(a//20)*20)
-- OUTPUT:
40
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:25:35) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print(a)
print(a -(a//20)*20)
-- OUTPUT:
40
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:27:36) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50)
print(a)
print(a//20)
a = a - (a//20)*20
print(a//2)
-- OUTPUT:
40
28
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:28:55) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - ((a//50)*50
print(a//10)
a = a - (a//10)*10
print(a//2)
-- ERROR:
File "XXXX", line 5
    print(a//10)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:15) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - (a//50)*50
print(a//10)
a = a - (a//10)*10
print(a//2)
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:29:27) 
-- CODE:
a = int(input('quanto deseja scar? '))

print(a//50)
a = a - (a//50)*50
print(a//10)
a = a - (a//10)*10
print(a//2)
-- EXECUTION TIME:
0.158897
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
